syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "unified.proto";
option go_package = "github.com/ops-cn/go-devops/proto/admin";
package admin;

service MenuMgr {
  // 查询数据
  rpc Query(MenuQueryReq) returns(unified.Response) {}
  // 查询指定数据
  rpc Get(MenuReq) returns(unified.Response) {}
  // 创建数据
  rpc Create(Menu) returns(unified.Response) {}
  // 更新数据
  rpc Update(MenuReq) returns(unified.Response) {}
  // 删除数据
  rpc Delete(Menu) returns(unified.Response) {}
  // 更新状态
  rpc UpdateStatus(Menu) returns(unified.Response) {}
}
message DataFile {
  string DataFile = 1;
}

message Menu {
  string ID = 1;
  string Name = 2;
  int32 Sequence = 3;
  string Icon = 4;
  string Router = 5;
  string ParentPath = 6;
  int32 ShowStatus = 7;
  int32 Status = 8;
  string Memo = 9;
  string Creator = 10;
  // @inject_tag: valid:"created_at"
  google.protobuf.Timestamp CreatedAt = 11;
  // @inject_tag: valid:"updated_at"
  google.protobuf.Timestamp UpdatedAt = 12;
  repeated  MenuAction Actions = 13;
}
message MenuAction {
  string ID = 1;
  string MenuID = 2;
  string Code = 3;
  string Name = 4;
  repeated MenuActionResource Resources = 5;
}
message MenuActionResource {
  string ID = 1;
  string ActionID = 2;
  string Method = 3;
  string Path = 4;
}

message MenuQueryReq {
  MenuQueryParam MenuQueryParam = 1;
  MenuQueryOptions MenuQueryOptions = 2;
}
message MenuReq {
  string CurrentID = 1;
  Menu Menu = 2;
  MenuQueryOptions MenuQueryOptions = 3;
}

message MenuQueryParam {
  unified.PaginationParam PaginationParam = 1;
  repeated string IDs = 2;
  string Name = 3;
  string PrefixParentPath = 4;
  string QueryValue = 5;
  string ParentID = 6;
  int32 ShowStatus = 7;
  int32 Status = 8;
}

message MenuQueryOptions {
  repeated unified.OrderField OrderField = 1;
}

message MenuQueryResult {
  repeated Menu Data = 1;
  unified.PaginationResult PageResult = 2;
}

message MenuTree {
  string ID = 1;
  string Name = 2;
  int32 Sequence = 3;
  string Icon = 4;
  string Router = 5;
  string ParentPath = 6;
  int32 ShowStatus = 7;
  int32 Status = 8;
  string ParentID = 9;
  repeated MenuAction Actions = 10;
  repeated MenuTree Children = 11;
}
message MenuActions {
  repeated MenuAction MenuAction = 1;
}

message MenuTrees {
  repeated MenuTree MenuTree = 1;
}
