syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "unified.proto";
option go_package = "github.com/ops-cn/go-devops/proto/admin";
package admin;

service UserMgr {
  // 查询数据
  rpc Query(UserQueryReq) returns(unified.Response) {}
  // 查询指定数据
  rpc Get(UserReq) returns(unified.Response) {}
  // 创建数据
  rpc Create(User) returns(unified.Response) {}
  // 更新数据
  rpc Update(UserReq) returns(unified.Response) {}
  // 删除数据
  rpc Delete(User) returns(unified.Response) {}
  // 更新状态
  rpc UpdateStatus(User) returns(unified.Response) {}
  // 更新密码
  rpc UpdatePassword(User) returns(unified.Response) {}
}


message User {
  string ID = 1;
  // @inject_tag: valid:"user_name"
  string UserName = 2;
  // @inject_tag: valid:"real_name"
  string RealName = 3;
  string Password = 4;
  string Phone = 5;
  string Email = 6;
  int32 Status = 7;
  string Creator = 8;
  // @inject_tag: valid:"created_at"
  google.protobuf.Timestamp CreatedAt = 9;
  repeated UserRole UserRoles = 10;
}

message UserRole {
  string ID = 1;
  // @inject_tag: valid:"user_id"
  string UserID =2;
  // @inject_tag: valid:"role_id"
  string RoleID =3;
}

message UserQueryReq {
  UserQueryParam UserQueryParam = 1;
  UserQueryOptions UserQueryOptions = 2;
}
message UserReq {
  string CurrentID = 1;
  User User = 2;
  UserQueryOptions UserQueryOptions = 3;
}

message UserQueryParam {
  unified.PaginationParam PaginationParam = 1;
  repeated string IDs = 2;
  string Name = 3;
  string PrefixParentPath = 4;
  string QueryValue = 5;
  string ParentID = 6;
  int32 ShowStatus = 7;
  int32 Status = 8;
}

message UserQueryOptions {
  repeated unified.OrderField OrderField = 1;
}

message UserQueryResult {
  repeated User Data = 1;
  unified.PaginationResult PageResult = 2;
}